# testHeroku

./: .gitignore  DataMining.py  Procfile  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
hancock/: asgi.py  settings.py  urls.py  wsgi.py
manager/: admin.py  apps.py  forms.py  models.py
manager/migrations/: 0001_initial.py  0002_auto_20210301_0250.py  0003_media_description.py  0004_auto_20210301_0256.py  0005_session.py  0006_auto_20210305_2310.py  0007_auto_20210305_2311.py  0008_auto_20210305_2315.py  0009_auto_20210305_2316.py  0010_recordingsession_name.py  0011_auto_20210311_2031.py  0012_media_file_extension.py  0013_auto_20210328_1534.py  0014_auto_20210328_1538.py  0015_media_related_media.py  0016_auto_20210328_1625.py  0017_auto_20210328_1640.py  0018_remove_media_file_extension.py  0019_media_file_extension.py  0020_auto_20210328_1738.py  0021_auto_20210328_1808.py  0022_auto_20210328_1814.py  0023_auto_20210328_1835.py  0024_remove_person_duration_active.py  0025_physicallocation_picture.py
manager/templates/admin/: base_site.html  login.html
